Implement load testing infrastructure using Artillery for the quiz application. Add various scenarios to simulate participant connections and responses, including mass connections and burst responses. Introduce scripts for setting up test environments, monitoring metrics, and analyzing results. Update package dependencies and scripts in package.json for load testing execution.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,25 @@
     "dev": "tsx server.ts",
     "build": "next build",
     "start": "NODE_ENV=production tsx server.ts",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:load:setup": "node load-tests/seed-quiz.js",
+    "test:load:small": "node load-tests/run-with-seed.js join-and-play-small",
+    "test:load:medium": "node load-tests/run-with-seed.js join-and-play-medium",
+    "test:load:large": "node load-tests/run-with-seed.js join-and-play-large",
+    "test:load:stress": "node load-tests/run-with-seed.js join-and-play-stress",
+    "test:load:A10": "node load-tests/run-with-seed.js A-mass-connection-10",
+    "test:load:A50": "node load-tests/run-with-seed.js A-mass-connection-50",
+    "test:load:A100": "node load-tests/run-with-seed.js A-mass-connection-100",
+    "test:load:A200": "node load-tests/run-with-seed.js A-mass-connection-200",
+    "test:load:A500": "node load-tests/run-with-seed.js A-mass-connection-500",
+    "test:load:B": "node load-tests/run-burst.js B-burst-response",
+    "test:load:C": "node load-tests/run-burst.js C-full-game",
+    "test:load:D5": "artillery run load-tests/scenarios/D-multiple-rooms.yml",
+    "test:load:D10": "artillery run load-tests/scenarios/D-multiple-rooms-10.yml",
+    "test:load:E": "node load-tests/run-with-seed.js E-disconnect-reconnect",
+    "test:load:monitor": "node load-tests/monitor.js 1000",
+    "test:load:run-all": "bash load-tests/run-all.sh",
+    "test:load:analyze": "node load-tests/analyze.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
@@ -31,6 +49,8 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "artillery": "^2.0.30",
+    "artillery-engine-socketio-v3": "^1.2.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.0",
     "postcss": "^8.4.49",
