Add Google AdSense integration and update .env.example
Introduce the AdSense component to display ads based on user consent and environment variables. Update .env.example to include AdSense configuration options. Modify various pages to incorporate AdSense ads, ensuring compliance with consent management. Enhance the privacy policy to reflect data collection practices related to AdSense.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@
 NEXT_PUBLIC_GA_MEASUREMENT_ID=
 # Desabilitar GA em desenvolvimento (true | false)
 NEXT_PUBLIC_GA_ENABLED=true
+
+# Google AdSense
+# ID do publicador (ex: ca-pub-XXXXXXXXXXXXXXXX)
+NEXT_PUBLIC_ADSENSE_CLIENT_ID=
+# Desabilitar AdSense em desenvolvimento (true | false)
+NEXT_PUBLIC_ADSENSE_ENABLED=true
+# Slots de anúncio (criar unidades no painel AdSense e preencher)
+# NEXT_PUBLIC_ADSENSE_SLOT_BANNER=
+# NEXT_PUBLIC_ADSENSE_SLOT_RECTANGLE=
