Add HTML report generation for load tests
Introduce a new script to generate HTML reports from Artillery JSON results, replacing the removed `artillery report` command. Update `package.json` with a new command for generating the report and enhance the README with usage instructions. This improves the visibility of load test results in a user-friendly format.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test:load:playwright:install": "npx playwright install chromium",
     "test:load:playwright:seed": "node load-tests/seed-quiz-playwright.js",
     "test:load:analyze": "node load-tests/analyze.js",
+    "test:load:report:html": "node load-tests/report-html.js",
     "docker:build": "docker build -t hootka:latest .",
     "docker:run": "docker run --rm -p 3000:3000 hootka:latest"
   },
