Add Firebase integration for real-time quiz management
Introduce Firebase configuration in .env.example and .env.local.example for real-time data handling. Implement Firebase Admin SDK for server-side operations and create necessary API routes for managing quiz rooms, including creating, joining, and answering questions. Update quiz storage logic to support cloud persistence and synchronization. Enhance the user experience by allowing quizzes to be saved in the cloud and synchronized across devices. Update .gitignore to exclude sensitive files and add Firebase rules for data security.

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,9 @@
+# Copie para .env.local e preencha os valores
 # Provider de tempo real: websocket (padrão) ou firebase
 NEXT_PUBLIC_PROVIDER=websocket
 
 # Firebase (obrigatório quando NEXT_PUBLIC_PROVIDER=firebase)
-# Configuração do cliente - obter no Console Firebase > Configurações do projeto
+# Obter no Console Firebase > Configurações do projeto > Seus apps
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_FIREBASE_DATABASE_URL=
@@ -14,22 +15,7 @@ NEXT_PUBLIC_FIREBASE_APP_ID=
 # Firebase Admin (servidor) - para API routes no modo Firebase
 # Opção 1: Caminho para arquivo JSON da conta de serviço
 # GOOGLE_APPLICATION_CREDENTIALS=./firebase-service-account.json
-# Opção 2: Variáveis individuais (private key com \n escapado)
+# Opção 2: Variáveis individuais (FIREBASE_PRIVATE_KEY com \n para quebras de linha)
 # FIREBASE_PROJECT_ID=
 # FIREBASE_CLIENT_EMAIL=
 # FIREBASE_PRIVATE_KEY=
-
-# Google Analytics (GA4)
-# ID de medição do GA4 (ex: G-)
-NEXT_PUBLIC_GA_MEASUREMENT_ID=
-# Desabilitar GA em desenvolvimento (true | false)
-NEXT_PUBLIC_GA_ENABLED=true
-
-# Google AdSense
-# ID do publicador (ex: ca-pub-XXXXXXXXXXXXXXXX)
-NEXT_PUBLIC_ADSENSE_CLIENT_ID=
-# Desabilitar AdSense em desenvolvimento (true | false)
-NEXT_PUBLIC_ADSENSE_ENABLED=true
-# Slots de anúncio (criar unidades no painel AdSense e preencher)
-# NEXT_PUBLIC_ADSENSE_SLOT_BANNER=
-# NEXT_PUBLIC_ADSENSE_SLOT_RECTANGLE=
