--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
     "framer-motion": "^12.34.2",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
